--- a/App.xaml
+++ b/App.xaml
@@ -3,9 +3,7 @@
     x:Class="CryptoPortfolioTracker.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CryptoPortfolioTracker"
-    
-    RequestedTheme="Dark">
+    xmlns:local="using:CryptoPortfolioTracker">
     <Application.Resources>
          <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
