--- a/Resources/Styles.xaml
+++ b/Resources/Styles.xaml
@@ -101,7 +101,9 @@
         <Setter Property="Margin" Value="0,0,0,12"/>
     </Style>
 
-    <Style x:Key="TagLineTextStyle" TargetType="TextBlock" BasedOn="{StaticResource BodyTextBlockStyle}">
+    <Style x:Key="ExplainerTextStyle" TargetType="TextBlock" BasedOn="{StaticResource BodyTextBlockStyle}">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="Foreground" Value="{ThemeResource DefaultTextForegroundThemeBrush}"/>
     </Style>
 
     <Style x:Key="SampleHeaderTextStyle" TargetType="TextBlock" BasedOn="{StaticResource TitleTextBlockStyle}">
