--- a/Views/CoinLibraryView.xaml
+++ b/Views/CoinLibraryView.xaml
@@ -15,7 +15,6 @@
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <converters:ImageUriToBitmapImageConverter x:Key="ImageConverter"/>
         <converters:StringFormatConverter x:Key="StringFormatConverter"/>
-        <converters:ThemeColorConverter x:Key="ThemeColorConverter"/>
         <converters:AddPrefixConverter x:Key="AddPrefixConverter"/>
 
         <Style x:Key="HorizontalSwipe" TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
@@ -36,11 +35,11 @@
             <controls:HomePageHeaderImage Grid.Row="0" Grid.RowSpan="3" Height="265" VerticalAlignment="Top"/>
             <RelativePanel>
                 <TextBlock AutomationProperties.AutomationId="__ClickableAreaTextBlock" />
-                <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="{Binding Foreground, ElementName=smallHeaderText, Converter={StaticResource ThemeColorConverter}}" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
-                <TextBlock x:Uid="Library_Title" x:Name="txtCoinLibrary" Margin="36,10,0,0" Foreground="{Binding Foreground, ElementName=txtCoinLibrary, Converter={StaticResource ThemeColorConverter}}" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
-                <TextBlock Text="{Binding ListCoins.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" Margin="0,10,0,0" Foreground="{Binding Foreground, ElementName=txtCoinLibrary, Converter={StaticResource ThemeColorConverter}}" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" RelativePanel.RightOf="txtCoinLibrary" />
+                <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
+                <TextBlock x:Uid="Library_Title" x:Name="txtCoinLibrary" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
+                <TextBlock Text="{Binding ListCoins.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" Margin="0,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" RelativePanel.RightOf="txtCoinLibrary" />
             </RelativePanel>
-            <TextBlock x:Uid="Library_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Style="{StaticResource ScenarioDescriptionTextStyle}" Margin="35,0,20,20" TextWrapping="Wrap"> </TextBlock>
+            <TextBlock x:Uid="Library_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Style="{StaticResource ExplainerTextStyle}" Margin="35,0,20,20" TextWrapping="Wrap"> </TextBlock>
             <Border Grid.Row="2" VerticalAlignment="Stretch" >
                 <Grid Name="LibraryContent" >
                     <Grid.RowDefinitions>
