--- a/Views/HelpView.xaml
+++ b/Views/HelpView.xaml
@@ -61,7 +61,7 @@
                     </RichTextBlock>
                     <RichEditBox x:Name="editor" Loaded="OnLoaded" CornerRadius="8,8,8,8" Grid.Row="1" 
                      Margin="0,0,0,0" Style="{StaticResource MK_RichEditBoxStyle}"
-                     IsReadOnly="True" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+                     IsReadOnly="True"/>
                     <StackPanel x:Name="EditorButtons" Visibility="Collapsed" Orientation="Horizontal" Grid.Row="2" >
                         <Button Click="OpenButton_Click">Open File</Button>
                         <Button Click="SaveButton_Click">Save File</Button>
