--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -7,6 +7,7 @@
     xmlns:converters="using:CryptoPortfolioTracker.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Loaded="MainPage_Loaded"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -17,7 +18,7 @@
 
     <Grid >
         
-        <NavigationView x:Name="nvSample"
+        <NavigationView x:Name="navigationView"
                 IsSettingsVisible="True"
                 IsBackButtonVisible="Collapsed"
                 SelectionChanged="NavigationView_SelectionChanged"
